# staratlas-cookbook

./: .env.sample  .gitignore  404.html  LICENSE  README.md  about.html  awesome.html  book.toml  bun.lockb  intro.html  package.json  player_profile.html  print.html  sage.html  searchindex.js  searchindex.json  tips.html
player_profile/: profile.html
playground/: NOTES.md  README.md  bun.lockb  package.json
playground/frontend/: bun.lockb  index.html  package.json
playground/frontend/src/: App.tsx  AppLazy.tsx  Editor.tsx  Home.tsx  (+1 more)
sage/: fleets.html  game.html  planets.html  starbases.html
scripts/: 00-setup.ts  01-player-profiles.ts  02-sage-game.ts  03-sage-fleet.ts  04-sage-idle-fleets.ts  05-sage-planets.ts  06-sage-starbases.ts
src/: SUMMARY.md  about.md  awesome.md  intro.md  player_profile.md  sage.md  tips.md
src/player_profile/: profile.md
src/sage/: fleets.md  game.md  planets.md  starbases.md
theme/css/: variables.css
tutorials/: README.md
tutorials/00-basic/: Cargo.toml  build.ts  bun.lockb  index.html  index.ts  package.json  tsconfig.base.json  tsconfig.json
tutorials/00-wallet/: bun.lockb  index.html  package.json  vite.config.ts
tutorials/00-wasm-bevy/: Cargo.toml  index.html  index.scss
tutorials/01-sage-rust-wasm/: bun.lockb  index.html  package.json  vite.config.ts
tutorials/01-sage-rust-wasm/rust-wasm-lib/: Cargo.toml  README.md  index.html  index.scss
tutorials/01-sage-rust-wasm/rust-wasm-lib/pkg/: rust-wasm-lib.js
tutorials/01-sage-rust-wasm/rust-wasm-lib/src/: _main.rs  camera.rs  fleet.rs  lib.rs  main.rs
(+21 files in other folders)
