[package]
name = "rust-wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.12.0"
bevy_embedded_assets = "0.9.1"
wasm-bindgen = "0.2.88"
web-sys = "0.3.65"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
